Fix bootstrap3 vertical scrollbar bug, fix CKAN side footer items to align correctly with this fix

--- a/shared/scss/components/ckan/layout.scss
+++ b/shared/scss/components/ckan/layout.scss
@@ -57,11 +57,6 @@
   margin-left: 0;
   margin-right: 0;
 
-  @media(min-width: $width-md) {
-    margin-left: -15px;
-    margin-right: -15px;
-  }
-
   &.row-compensate {
     margin-left: -15px;
     margin-right: -15px;
