--- a/shared/scss/components/common/footer.scss
+++ b/shared/scss/components/common/footer.scss
@@ -1,4 +1,5 @@
 .site-footer {
+  margin-top: $base;
   padding-top: $base*6;
   background: $footer-background-color;
   color: $footer-text-color;
@@ -19,6 +20,11 @@
     &.active {
       color: $footer-link-color-active;
     }
+  }
+
+  .container {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -75,6 +81,7 @@
 }
 
 .copyrights {
-  padding: $base*2 0 $base*8;
+  padding-top: $base*2;
+  padding-bottom: $base*2;
   text-align: right;
 }
